welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:21: error: ';' expected but 'if' found.
	    } if ((a<20 && a>12)&&(b<20 && b>12)&&(c<20 && c>12)&&(d<20 && d>12)) {
              ^